--- a/style/style.css
+++ b/style/style.css
@@ -764,6 +764,12 @@ img {
 .modal-button:hover .modal-svg {
     fill: #2196F3;
 } 
+.modal-button:focus {
+    color: #2196F3;
+  }
+  .modal-button:focus .modal-svg {
+      fill: #2196F3;
+  } 
 .modal-form {
     display: flex;
     flex-direction: column;
@@ -782,6 +788,7 @@ img {
 .label {
     position: relative;
     display: block;
+    margin-bottom: 10px;
 }
 .label-text {
     font-weight: 400;
@@ -795,7 +802,7 @@ img {
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    margin-bottom: 10px;
+    
     padding-left: 45px;
     height: 41px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -806,7 +813,7 @@ img {
     border-radius: 4px;
     resize: none;
     padding: 12px;
-    margin-bottom: 20px;
+    
 
     width: 448px;
     height: 120px;
@@ -874,6 +881,7 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #757575;
+    margin-bottom: 20px;
 }
 .checkbox-icon {
     display: block;
@@ -895,6 +903,9 @@ img {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
+}
+.checkbox:focus + .checkbox-icon {
+    border-color: #2196F3;
 }
 
 .checkbox{
@@ -922,6 +933,7 @@ img {
     padding-left: 16px;
 }
 .text-input {
+    display: block;
     font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
@@ -932,7 +944,7 @@ color: #FFFFFF;
 margin-bottom: 20px;
 }
 .foot-submit {
-    position: absolute;
+    
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -951,8 +963,7 @@ margin-bottom: 20px;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     margin-left: 12px;
-
-
+    
 }
 .foot-submit::after {
     content: '';
@@ -965,9 +976,11 @@ margin-bottom: 20px;
 
     background-position: center;
     background-size: contain;
-
-    
-    
+}
+.foot-form {
+    display: inline-flex;
+    align-items: center;
+   
 }
 .foot-div {
     margin-left: 93px;
